densit function compiler, c2me, and orion v4